--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -4,10 +4,20 @@
 }
 
 .maxWidthWrapper {
+  position: relative;
+}
+
+.perspectiveBg {
+  position: fixed;
+  bottom: 0;
+  height: 40%;
+  width: 100%;
+  background-color: hsl(195deg 20% 86%);
 }
 
 .header {
   padding-bottom: 64px;
+  max-width: 65%;
 }
 
 .title {
@@ -24,7 +34,14 @@
 }
 
 .characterWrapper {
+  position: fixed;
+  min-height: 500px;
+  top: 128px;
+  left: 65%;
+  bottom: 0;
+  right: 0;
 }
 
 .controlColumn {
+  max-width: 50%;
 }
