--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -36,9 +36,9 @@
 .characterWrapper {
   position: fixed;
   min-height: 500px;
-  top: 128px;
+  top: 80px;
   left: 65%;
-  bottom: 0;
+  bottom: 160px;
   right: 0;
 }
 
