--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -1,6 +1,10 @@
 .characterEditor {
-  padding-top: 128px;
+  padding-top: 32px;
   padding-bottom: 64px;
+
+  @media screen and (min-width: 768px) {
+    padding-top: 128px;
+  }
 }
 
 .maxWidthWrapper {
@@ -16,8 +20,12 @@
 }
 
 .header {
-  padding-bottom: 64px;
-  max-width: 65%;
+  padding-bottom: 240px;
+
+  @media screen and (min-width: 768px) {
+    padding-bottom: 64px;
+    max-width: 65%;
+  }
 }
 
 .title {
@@ -34,14 +42,32 @@
 }
 
 .characterWrapper {
-  position: fixed;
+  position: absolute;
   min-height: 500px;
-  top: 80px;
-  left: 65%;
-  bottom: 160px;
+  top: 300px;
+  left: 20%;
   right: 0;
+
+  @media screen and (min-width: 768px) {
+    position: fixed;
+    top: 80px;
+    left: 65%;
+    bottom: 160px;
+    right: 0;
+  }
 }
 
 .controlColumn {
-  max-width: 50%;
+  display: flex;
+  overflow: auto;
+  gap: 16px;
+
+  @media screen and (min-width: 768px) {
+    max-width: 50%;
+    flex-direction: column;
+  }
+}
+
+.controlColumn::-webkit-scrollbar {
+  display: none;
 }
