--- a/src/components/ControlPane/ControlPane.module.css
+++ b/src/components/ControlPane/ControlPane.module.css
@@ -10,8 +10,10 @@
     to deal with it yet!
   */
   margin-bottom: 32px;
-  white-space: nowrap;
-  overflow: auto;
+  max-width: 310px;
+  @media screen and (min-width: 768px) {
+    max-width: unset;
+  }
 }
 
 .title {
